solving an issue of "jumping" sidebar menu icons

--- a/layout/sidebars/_menu_desktop.scss
+++ b/layout/sidebars/_menu_desktop.scss
@@ -189,7 +189,6 @@ aside.desktop {
         border-top-style: solid;
         border-top-color: $lighter_blue;
         span { @include rem('margin-top', 1); }
-        &:before { @include rem('margin-top', -9); }
       }
     }
 
